--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -1,4 +1,4 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
+<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="">ticketing system</a>
     </div>
@@ -19,11 +19,11 @@
                 <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
             </NavLink>
         </div>
-            <div class="nav-item px-3">
+            @*<div class="nav-item px-3">
                 <NavLink class="nav-link" href="Tickets">
                     <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Tickets
                 </NavLink>
-            </div>
+        </div>*@
             <div class="nav-item px-3">
                 <NavLink class="nav-link" href="admin-Login">
                     <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span>AdminLogin
@@ -33,11 +33,11 @@
                         <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span>CustomerLogin
                     </NavLink>
                 </div>
-                <div class="nav-item px-3">
+                @*<div class="nav-item px-3">
                     <NavLink class="nav-link" href="view-tickets">
                         <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span>View Tickets
                     </NavLink>
-                </div>
+            </div>*@
 
         </div>
     </nav>
