--- a/Components/Pages/AdminLogin.razor
+++ b/Components/Pages/AdminLogin.razor
@@ -1,27 +1,21 @@
 @page "/admin-login"
 @inject NavigationManager NavigationManager
-@inject ICustomAuthenticationService AuthenticationService
+@using BlazorApp2.Models
 @using BlazorApp2
-@using Microsoft.AspNetCore.Components.Authorization
 @using BlazorApp2.Components
+@rendermode InteractiveServer
 
 
 <h3>Admin Login</h3>
 
-<EditForm Model="@AdminloginModel" OnValidSubmit="HandleLoginAsync">
-    <DataAnnotationsValidator />
-    <ValidationSummary />
+<label for="username">Username:</label>
+<input type="text" @bind="@username" />
 
-    <div>
-        <label for="username">Username:</label>
-        <InputText id="username" @bind-Value="AdminloginModel.Username" />
-    </div>
-    <div>
-        <label for="password">Password:</label>
-        <InputText id="password" @bind-Value="AdminloginModel.Password" type="password" />
-    </div>
-    <button type="submit">Login</button>
-</EditForm>
+<label for="password">Password:</label>
+<input type="text" @bind="@password" />
+
+<button class="btn btn-primary" @onclick="checkLogin">Login</button>
+
 
 @if (!string.IsNullOrEmpty(errorMessage))
 {
@@ -29,32 +23,22 @@
 }
 
 @code {
-    private AdminLoginModel AdminloginModel = new AdminLoginModel();
     private string errorMessage = string.Empty;
+    string username = "";
+    string password = "";
 
-    private async Task HandleLoginAsync()
-    {
-        try
-        {
-            var result = await AuthenticationService.LoginAsync(AdminloginModel.Username, AdminloginModel.Password);
-            if (result)
-            {
-                NavigationManager.NavigateTo("/admin-dashboard");
-            }
-            else
-            {
-                errorMessage = "Invalid username or password.";
-            }
-        }
-        catch (Exception ex)
-        {
-            errorMessage = $"An error occurred: {ex.Message}";
-        }
-    }
-    public class AdminLoginModel
-    {
-        public string Username { get; set; }
 
-        public string Password { get; set; }
+    private void checkLogin()
+    {
+        if (username == "admin" && password == "password")
+        {
+            // enabling this to access view tickets page
+            GlobalVariables.isAdmin = true;
+            NavigationManager.NavigateTo("/view-tickets");
+        }
+        else
+        {
+            errorMessage = "Invalid username or password.";
+        }
     }
 }
