--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -1,6 +1,6 @@
 <div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">ticketing system</a>
+        <a class="navbar-brand" href="">Ticketing system</a>
     </div>
 </div>
 
@@ -28,6 +28,7 @@
                 <NavLink class="nav-link" href="admin-Login">
                     <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span>AdminLogin
                 </NavLink>
+         </div>
                 <div class="nav-item px-3">
                     <NavLink class="nav-link" href="customer-Login">
                         <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span>CustomerLogin
@@ -38,8 +39,11 @@
                         <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span>View Tickets
                     </NavLink>
             </div>*@
-
-        </div>
+            <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="agent-Login">
+                        <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span>AgentLogin
+                    </NavLink>
+                </div>
     </nav>
 </div>
 
