--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -19,31 +19,36 @@
                 <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
             </NavLink>
         </div>
-            @*<div class="nav-item px-3">
+
+            @* <div class="nav-item px-3">
                 <NavLink class="nav-link" href="Tickets">
                     <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Tickets
                 </NavLink>
-        </div>*@
+            </div> *@
+
             <div class="nav-item px-3">
                 <NavLink class="nav-link" href="admin-Login">
                     <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span>AdminLogin
                 </NavLink>
-         </div>
+            </div>
+
                 <div class="nav-item px-3">
-                    <NavLink class="nav-link" href="customer-Login">
+                    <NavLink class="nav-link" href="customer-login">
                         <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span>CustomerLogin
                     </NavLink>
                 </div>
-                @*<div class="nav-item px-3">
+
+               @*  <div class="nav-item px-3">
                     <NavLink class="nav-link" href="view-tickets">
                         <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span>View Tickets
                     </NavLink>
-            </div>*@
+                </div> *@
+
             <div class="nav-item px-3">
-                    <NavLink class="nav-link" href="agent-Login">
-                        <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span>AgentLogin
-                    </NavLink>
-                </div>
+                <NavLink class="nav-link" href="agent-Login">
+                    <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span>AgentLogin
+                </NavLink>
+            </div>
     </nav>
 </div>
 
