--- a/Components/Pages/AdminLogin.razor
+++ b/Components/Pages/AdminLogin.razor
@@ -12,7 +12,7 @@
 <input type="text" @bind="@username" />
 
 <label for="password">Password:</label>
-<input type="text" @bind="@password" />
+<input type="password" @bind="@password" />
 
 <button class="btn btn-primary" @onclick="checkLogin">Login</button>
 
