--- a/Components/Pages/AgentDashboard.razor
+++ b/Components/Pages/AgentDashboard.razor
@@ -4,6 +4,7 @@
 @inject TicketService TicketService
 @inject NavigationManager NavigationManager
 @inject AuthenticationService AuthService
+@rendermode InteractiveServer
 
 <h3>Agent Dashboard</h3>
 
