--- a/Components/Pages/AgentLogin.razor
+++ b/Components/Pages/AgentLogin.razor
@@ -30,7 +30,7 @@
 
     private void checkLogin()
     {
-        if (username == "agent" && password == "password" || username == "agent2" && password == "password" || username == "agent3" && password == "password")
+        if (username == "agent1" && password == "password" || username == "agent2" && password == "password" || username == "agent3" && password == "password")
         {
             // enabling this to access view tickets page
             GlobalVariables.isAgent = true;
