--- a/Components/Pages/ViewTicket.razor
+++ b/Components/Pages/ViewTicket.razor
@@ -19,13 +19,15 @@ else if (tickets.Count == 0)
 }
 else
 {
-    <h3>Customer List</h3>
+
+    <h4>Customer List</h4>
     <ul>
         @foreach (var customer in tickets)
         {
             <li>@customer.CustomerName - @customer.Issue</li>
         }
     </ul>
+
     <table class="table">
         <thead>
             <tr>
@@ -102,7 +104,7 @@ else
         try
         {
             // Your logic to load tickets from the service
-            // tickets = TicketService.GetTickets() ?? new List<Ticket>();
+            tickets = TicketService.GetTickets() ?? new List<Ticket>();
             tickets = _context.Tickets.ToList();
         }
         catch (Exception ex)
