--- a/Components/Pages/ViewTicket.razor
+++ b/Components/Pages/ViewTicket.razor
@@ -1,4 +1,4 @@
-@page "/view-tickets"
+﻿@page "/view-tickets"
 @using Microsoft.AspNetCore.Http
 @using BlazorApp2.Models
 @using BlazorApp2.Services
