--- a/Components/Pages/Tickets.razor
+++ b/Components/Pages/Tickets.razor
@@ -9,7 +9,7 @@
 <h3>Create Ticket</h3>
 
 <div>
-    <label>Ticket ID:</label>
+    <label>TicketId:</label>
     <input type="Number" @bind="newTicket.TicketId" />
 </div>
 <div>
@@ -17,7 +17,7 @@
     <input type="Text" @bind="newTicket.Title" />
 </div>
 <div>
-    <label>Customer Name:</label>
+    <label>CustomerName:</label>
     <input type="Text" @bind="newTicket.CustomerName" />
 </div>
 <div>
@@ -25,11 +25,11 @@
     <input type="Text" @bind="newTicket.Issue" />
 </div>
 <div>
-    <label>Company Name:</label>
+    <label>CompanyName:</label>
     <input type="Text" @bind="newTicket.CompanyName" />
 </div>
 <div>
-    <label>Issue Category:</label>
+    <label>IssueCategory:</label>
     <input type="Text" @bind="newTicket.IssueCategory" />
 </div>
 <div>
