--- a/Components/Pages/ViewTicket.razor
+++ b/Components/Pages/ViewTicket.razor
@@ -33,11 +33,11 @@ else
                 <th>Title</th>
                 <th>CustomerName</th>
                 <th>Issue</th>
-                <th>Company name</th>
+                <th>CompanyName</th>
                 <th>IssueCategory</th>
                 <th>Description</th>
                 <th>Status</th>
-                <th>Assign To</th>
+                <th>AssignTo</th>
                 <th>Action</th>
             </tr>
         </thead>
