--- a/Components/Pages/AdminLogin.razor
+++ b/Components/Pages/AdminLogin.razor
@@ -28,7 +28,7 @@
     string password = "";
 
 
-    private void checkLogin()
+    private async Task checkLogin()
     {
         if (username == "admin" && password == "password")
         {
