--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -32,6 +32,11 @@
                 </NavLink>
             </div>
 
+           @* <div class="nav-item px-3">
+                <NavLink class="nav-link" href="adminsignup-approval">
+                    <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span>AdminSignUpAprroval
+                </NavLink>
+        </div>*@
                 <div class="nav-item px-3">
                     <NavLink class="nav-link" href="customer-login">
                         <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span>CustomerLogin
@@ -43,6 +48,12 @@
                         <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span>View Tickets
                     </NavLink>
                 </div> *@
+
+        @*<div class="nav-item px-3">
+                <NavLink class="nav-link" href="customer-signup">
+                    <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span>CustomerSignUp
+                </NavLink>
+        </div>*@
 
             <div class="nav-item px-3">
                 <NavLink class="nav-link" href="agent-Login">
